fix menu spacing

--- a/src/app/[locale]/components/header/style.scss
+++ b/src/app/[locale]/components/header/style.scss
@@ -85,7 +85,7 @@
     display: inline-flex;
 
     @media screen and (max-width: 700px) {
-      grid-column: 5 / 13;
+      grid-column: span 12;
     }
 
     &__icon {
